Update to match the latest draft. Add storage.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "iron": "^2.1.2",
     "node-uuid": "^1.4.2",
     "joi": "^5.0.2",
-    "lodash": "^2.4.1",
-    "patient-stream": "^1.0.0",
-    "minimist": "^1.1.0"
+    "lodash": "^3.6.0",
+    "minimist": "^1.1.0",
+    "level": "^0.18.0"
   }
 }
