--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "homepage": "https://github.com/kitcambridge/node-webpush-server",
   "dependencies": {
-    "http2": "^3.1.1",
-    "hapi": "^8.1.0",
-    "boom": "^2.6.1",
+    "http2": "3.1.2",
+    "hapi": "^8.4.0",
+    "boom": "^2.7.0",
     "iron": "^2.1.2",
-    "node-uuid": "^1.4.2",
-    "joi": "^5.0.2",
+    "node-uuid": "^1.4.3",
+    "joi": "^6.1.2",
     "lodash": "^3.6.0",
-    "minimist": "^1.1.0",
+    "minimist": "^1.1.1",
     "level": "^0.18.0"
   }
 }
