--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^6.1.2",
     "lodash": "^3.6.0",
     "minimist": "^1.1.1",
-    "level": "^0.18.0"
+    "levelup": "^0.19.0",
+    "leveldown": "^0.10.4"
   }
 }
