--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   },
   "homepage": "https://github.com/kitcambridge/node-webpush-server",
   "dependencies": {
-    "http2": "3.1.2",
-    "hapi": "^8.4.0",
-    "boom": "^2.7.0",
-    "iron": "^2.1.2",
-    "node-uuid": "^1.4.3",
-    "joi": "^6.1.2",
-    "lodash": "^3.6.0",
+    "boom": "^2.9.0",
+    "flyd": "^0.1.15",
+    "hapi": "^10.1.0",
+    "http2": "^3.2.0",
+    "iron": "^2.1.3",
+    "joi": "^6.7.1",
+    "leveldown": "^1.4.1",
+    "levelup": "^1.2.1",
+    "lodash": "^3.10.1",
     "minimist": "^1.1.1",
-    "levelup": "^0.19.0",
-    "leveldown": "^0.10.4"
+    "node-uuid": "^1.4.3"
   }
 }
